# iw_delivery

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 94bca7ce99ae_init.py
docs/: api_specification.md
src/iw_delivery/api/v1/: auth.py  items.py  orders.py  users.py
src/iw_delivery/cfg/: cfg.py
src/iw_delivery/core/: exceptions.py  security.py
src/iw_delivery/core/dependencies/: db.py  security.py
src/iw_delivery/core/dependencies/auth/: authentication_manager.py  context.py  user.py
src/iw_delivery/core/dependencies/repositories/: item_repository.py  order_repository.py  user_repository.py
src/iw_delivery/core/dependencies/services/: auth_service.py  item_service.py  order_service.py  user_service.py
src/iw_delivery/models/db/: __init__.py  base.py  items.py  orders.py  users.py
src/iw_delivery/models/dto/: items.py  orders.py  users.py
src/iw_delivery/repositories/db/: base.py  items.py  orders.py  users.py
src/iw_delivery/services/: auth_service.py  item_service.py  order_service.py  user_service.py
src/iw_delivery/utils/: dto_utils.py
