[project]
name = "iw-delivery"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "ruff>=0.15.20",
    "sqlalchemy>=2.0.51",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]
exclude = [
    ".venv",
    "src/iw_delivery/models"
]

[tool.ruff.lint]
select = ["FURB", "W", "PLW", "RUF", "E", "F", "B", "N", "UP", "SIM", "C4", "T20", "ARG", "ASYNC", "ANN", "FBT", "COM", "C4", "PLC", "DTZ", "EM", "PIE", "T20", "PT", "RSE", "RET", "TRY"]
ignore = [
    "E501",
    "E402",
    "B008",
    "RET504",
    "W293",
]

[tool.ruff.format]
